* 1.1.0

* No longer depend on the Daemons gem, use DeepTest::Warlock instead.